<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_30sdp"
    android:paddingBottom="@dimen/_12sdp"
    android:background="@drawable/setting_back"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".presentation.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <ImageView
            android:id="@+id/lightModeImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_light_mode_24"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/modeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textColor="@color/darkgreen"
            android:textSize="@dimen/_21ssp"
            />
        <Switch
            android:id="@+id/switchMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/dark_green"
            android:checked="true"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_12sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <ImageView
            android:id="@+id/languageImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_language"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/languageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/darkgreen"
            android:textSize="@dimen/_21ssp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <ImageView
            android:id="@+id/infoImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_info_24"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="@color/darkgreen"
            android:textSize="@dimen/_21ssp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <ImageView
            android:id="@+id/logoutImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_green_logout_24"
            android:layout_marginEnd="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/logoutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/darkgreen"
            android:textSize="@dimen/_21ssp"
            />
    </LinearLayout>
</LinearLayout>